# mcsim

./: README.md  default.nix  flake.nix  pack.nix  pyproject.toml
mcsim/: experiment.py  simulation.py
tests/: test_sample.py
