[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mcsim"
description = "My package description"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
